// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add disabled button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-211 MuiButtonBase-disabled-212 MuiButton-root-185 MuiButton-text-187 MuiButton-flat-190 MuiButton-disabled-205 sc-bdVaJa cNrUNG"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-186"
  >
    <span>
      default disabled
    </span>
  </span>
</button>
`;

exports[`add icon button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-211 MuiButton-root-185 MuiButton-text-187 MuiButton-flat-190 sc-bdVaJa cbcxry"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-186"
  >
    <span
      class="sc-bwzfXH czactv"
    >
      <svg
        aria-hidden="true"
        data-prefix="fas"
        data-icon="coffee"
        class="svg-inline--fa fa-coffee fa-w-20 "
        role="img"
        xmlns="http://www.w3.org/2000/svg"
        viewBox="0 0 640 512"
      >
        <path
          fill="currentColor"
          d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
        />
      </svg>
    </span>
    <span>
      default with icon
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-230"
  />
</button>
`;

exports[`add loading button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-211 MuiButtonBase-disabled-212 MuiButton-root-185 MuiButton-text-187 MuiButton-flat-190 MuiButton-disabled-205 sc-bdVaJa kxuXFA"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-186"
  >
    <div
      class="MuiCircularProgress-root-221 MuiCircularProgress-colorPrimary-224 MuiCircularProgress-indeterminate-223"
      style="margin-right: 10px; color: rgba(0, 181, 226, 0.6);"
      role="progressbar"
    >
      <svg
        class="MuiCircularProgress-svg-226"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle-227 MuiCircularProgress-circleIndeterminate-229"
          cx="44"
          cy="44"
          r="20.2"
          fill="none"
          stroke-width="3.6"
        />
      </svg>
    </div>
    <span>
      loading
    </span>
  </span>
</button>
`;

exports[`default button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 sc-bdVaJa gjZMZu"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-2"
  >
    <span>
      default
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-30"
  />
</button>
`;

exports[`default disabled button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-27 MuiButtonBase-disabled-28 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 MuiButton-disabled-21 sc-bdVaJa fRvfUR"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-2"
  >
    <span>
      default disabled
    </span>
  </span>
</button>
`;

exports[`default error button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-27 MuiButtonBase-disabled-28 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 MuiButton-disabled-21 sc-bdVaJa hTCEyd"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-2"
  >
    <span>
      error
    </span>
  </span>
</button>
`;

exports[`default error color button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 sc-bdVaJa hTCEyd"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-2"
  >
    <span>
      error color
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-46"
  />
</button>
`;

exports[`default icon button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 sc-bdVaJa gjZMZu"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-2"
  >
    <span
      class="sc-bwzfXH czactv"
    >
      <svg
        aria-hidden="true"
        data-prefix="fas"
        data-icon="coffee"
        class="svg-inline--fa fa-coffee fa-w-20 "
        role="img"
        xmlns="http://www.w3.org/2000/svg"
        viewBox="0 0 640 512"
      >
        <path
          fill="currentColor"
          d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
        />
      </svg>
    </span>
    <span>
      default with icon
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-60"
  />
</button>
`;

exports[`default loading button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-27 MuiButtonBase-disabled-28 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 MuiButton-disabled-21 sc-bdVaJa lkMVbx"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-2"
  >
    <div
      class="MuiCircularProgress-root-37 MuiCircularProgress-colorPrimary-40 MuiCircularProgress-indeterminate-39"
      style="margin-right: 10px; color: rgba(191, 191, 191, 0.7);"
      role="progressbar"
    >
      <svg
        class="MuiCircularProgress-svg-42"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle-43 MuiCircularProgress-circleIndeterminate-45"
          cx="44"
          cy="44"
          r="20.2"
          fill="none"
          stroke-width="3.6"
        />
      </svg>
    </div>
    <span>
      loading
    </span>
  </span>
</button>
`;

exports[`default secondary button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 sc-bdVaJa ffUUeT"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-2"
  >
    <span>
      secondary
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-30"
  />
</button>
`;

exports[`default success button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-27 MuiButtonBase-disabled-28 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 MuiButton-disabled-21 sc-bdVaJa ffLXpW"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-2"
  >
    <span>
      success
    </span>
  </span>
</button>
`;

exports[`default success color button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 sc-bdVaJa ffLXpW"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-2"
  >
    <span>
      success color
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-53"
  />
</button>
`;

exports[`default warning button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-27 MuiButton-root-1 MuiButton-text-3 MuiButton-flat-6 sc-bdVaJa jXMqsE"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-2"
  >
    <span />
  </span>
  <span
    class="MuiTouchRipple-root-30"
  />
</button>
`;

exports[`link default 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-159 MuiButton-root-133 MuiButton-text-135 MuiButton-flat-138 sc-bdVaJa jMXsoX"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-134"
  >
    <span>
      link
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-162"
  />
</button>
`;

exports[`link disabled button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-159 MuiButtonBase-disabled-160 MuiButton-root-133 MuiButton-text-135 MuiButton-flat-138 MuiButton-disabled-153 sc-bdVaJa KIcjQ"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-134"
  >
    <span>
      default disabled
    </span>
  </span>
</button>
`;

exports[`link icon button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-159 MuiButton-root-133 MuiButton-text-135 MuiButton-flat-138 sc-bdVaJa jMXsoX"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-134"
  >
    <span
      class="sc-bwzfXH czactv"
    >
      <svg
        aria-hidden="true"
        data-prefix="fas"
        data-icon="coffee"
        class="svg-inline--fa fa-coffee fa-w-20 "
        role="img"
        xmlns="http://www.w3.org/2000/svg"
        viewBox="0 0 640 512"
      >
        <path
          fill="currentColor"
          d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
        />
      </svg>
    </span>
    <span>
      default with icon
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-178"
  />
</button>
`;

exports[`link loading button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-159 MuiButtonBase-disabled-160 MuiButton-root-133 MuiButton-text-135 MuiButton-flat-138 MuiButton-disabled-153 sc-bdVaJa jFnHCu"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-134"
  >
    <div
      class="MuiCircularProgress-root-169 MuiCircularProgress-colorPrimary-172 MuiCircularProgress-indeterminate-171"
      style="margin-right: 10px; color: rgba(191, 191, 191, 0.7);"
      role="progressbar"
    >
      <svg
        class="MuiCircularProgress-svg-174"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle-175 MuiCircularProgress-circleIndeterminate-177"
          cx="44"
          cy="44"
          r="20.2"
          fill="none"
          stroke-width="3.6"
        />
      </svg>
    </div>
    <span>
      loading
    </span>
  </span>
</button>
`;

exports[`outline default 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-93 MuiButton-root-67 MuiButton-text-69 MuiButton-flat-72 sc-bdVaJa gyItIq"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-68"
  >
    <span>
      outline
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-96"
  />
</button>
`;

exports[`outline disabled button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-93 MuiButtonBase-disabled-94 MuiButton-root-67 MuiButton-text-69 MuiButton-flat-72 MuiButton-disabled-87 sc-bdVaJa gyItIq"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-68"
  >
    <span>
      default disabled
    </span>
  </span>
</button>
`;

exports[`outline error button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-93 MuiButtonBase-disabled-94 MuiButton-root-67 MuiButton-text-69 MuiButton-flat-72 MuiButton-disabled-87 sc-bdVaJa gyItIq"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-68"
  >
    <span>
      error
    </span>
  </span>
</button>
`;

exports[`outline error color button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-93 MuiButton-root-67 MuiButton-text-69 MuiButton-flat-72 sc-bdVaJa igAhgd"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-68"
  >
    <span>
      error color
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-112"
  />
</button>
`;

exports[`outline icon button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-93 MuiButton-root-67 MuiButton-text-69 MuiButton-flat-72 sc-bdVaJa gyItIq"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-68"
  >
    <span
      class="sc-bwzfXH czactv"
    >
      <svg
        aria-hidden="true"
        data-prefix="fas"
        data-icon="coffee"
        class="svg-inline--fa fa-coffee fa-w-20 "
        role="img"
        xmlns="http://www.w3.org/2000/svg"
        viewBox="0 0 640 512"
      >
        <path
          fill="currentColor"
          d="M192 384h192c53 0 96-43 96-96h32c70.6 0 128-57.4 128-128S582.6 32 512 32H120c-13.3 0-24 10.7-24 24v232c0 53 43 96 96 96zM512 96c35.3 0 64 28.7 64 64s-28.7 64-64 64h-32V96h32zm47.7 384H48.3c-47.6 0-61-64-36-64h583.3c25 0 11.8 64-35.9 64z"
        />
      </svg>
    </span>
    <span>
      default with icon
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-126"
  />
</button>
`;

exports[`outline loading button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-93 MuiButtonBase-disabled-94 MuiButton-root-67 MuiButton-text-69 MuiButton-flat-72 MuiButton-disabled-87 sc-bdVaJa gyItIq"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-68"
  >
    <div
      class="MuiCircularProgress-root-103 MuiCircularProgress-colorPrimary-106 MuiCircularProgress-indeterminate-105"
      style="margin-right: 10px; color: rgb(18, 85, 102);"
      role="progressbar"
    >
      <svg
        class="MuiCircularProgress-svg-108"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle-109 MuiCircularProgress-circleIndeterminate-111"
          cx="44"
          cy="44"
          r="20.2"
          fill="none"
          stroke-width="3.6"
        />
      </svg>
    </div>
    <span>
      loading
    </span>
  </span>
</button>
`;

exports[`outline secondary button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-93 MuiButton-root-67 MuiButton-text-69 MuiButton-flat-72 sc-bdVaJa gMHwuN"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-68"
  >
    <span>
      secondary
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-96"
  />
</button>
`;

exports[`outline success button 1`] = `
<button
  tabindex="-1"
  class="MuiButtonBase-root-93 MuiButtonBase-disabled-94 MuiButton-root-67 MuiButton-text-69 MuiButton-flat-72 MuiButton-disabled-87 sc-bdVaJa gyItIq"
  type="button"
  options="[object Object]"
  disabled=""
>
  <span
    class="MuiButton-label-68"
  >
    <span>
      success
    </span>
  </span>
</button>
`;

exports[`outline success color button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-93 MuiButton-root-67 MuiButton-text-69 MuiButton-flat-72 sc-bdVaJa fSsuLI"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-68"
  >
    <span>
      success color
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-119"
  />
</button>
`;

exports[`outline warning button 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-93 MuiButton-root-67 MuiButton-text-69 MuiButton-flat-72 sc-bdVaJa cIBlmP"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-68"
  >
    <span />
  </span>
  <span
    class="MuiTouchRipple-root-96"
  />
</button>
`;

exports[`renders add 1`] = `
<button
  tabindex="0"
  class="MuiButtonBase-root-211 MuiButton-root-185 MuiButton-text-187 MuiButton-flat-190 sc-bdVaJa cbcxry"
  type="button"
  options="[object Object]"
>
  <span
    class="MuiButton-label-186"
  >
    <span>
      add
    </span>
  </span>
  <span
    class="MuiTouchRipple-root-214"
  />
</button>
`;
